added polaroid, killed some unnecessary CSS classes

--- a/css/style.css
+++ b/css/style.css
@@ -151,6 +151,7 @@ html::selection {
 }
 
 .column {
+    flex: 1;
     display: flex;
     flex-direction: column;
 }
@@ -160,7 +161,6 @@ html::selection {
 html {
     color: var(--darkerShade);
     background: var(--bg);
-    width: 100vw;
     height: 100vh;
 }
 
@@ -210,6 +210,11 @@ video {
     pointer-events: none;
     -webkit-touch-callout: none;
     -webkit-user-drag: none;
+}
+
+canvas {
+    width: 100%;
+    height: 100%;
 }
 
 .button {
@@ -422,18 +427,10 @@ main {
 
 
 /* ABOUT */
-#bio {
-    gap: 120px;
-}
 
 #avi {
-    width: 320px;
-    height: 320px;
-
-    background-color: var(--darkerShade);
-    box-shadow: inset 0px -2px 0px 4px var(--darkerShade);
-
-    padding: 12px 12px 72px 12px;
+    width: 560px;
+    height: 560px;
 }
 
 
@@ -599,8 +596,9 @@ img {
         box-shadow: inset 0px -4px 0px 8px var(--darkShade);
     }
 
-    #bio {
-        gap: 0;
+    #avi {
+        width: 77vw;
+        height: 77vw;
     }
 
     .media-grid {
@@ -712,13 +710,13 @@ img {
         box-shadow: inset 0px -4px 0px 8px var(--darkShade);
     }
 
-    #spacer {
-        height: 0;
+    #avi {
+        width: 100vw;
+        height: 100vw;
     }
 
-    #avi {
-        width: 94%;
-        height: auto;
+    #spacer {
+        height: 0;
     }
 
     .media-grid {
